<?xml version="1.0"?>
<package format="2">
  <name>frontal_mmw_radar_msgs</name>
  <version>0.0.0</version>
  <description>The frontal_mmw_radar_msgs package</description>

  <maintainer email="mdj@todo.todo">mdj</maintainer>

  <license>TODO</license>

  <url type="website">http://wiki.ros.org/frontal_mmw_radar_msgs</url> 

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
