<?xml version="1.0"?>
<package format="2">
  <name>signal_msgs</name>
  <version>0.0.0</version>
  <description>The obstale_detection package</description>

  <maintainer email="zmr@todo.todo">mdj</maintainer>

  <license>TODO</license>

  <url type="website">http://wiki.ros.org/frontal_mmw_radar_msgs</url> 

  <buildtool_depend>catkin</buildtool_depend>


  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
</package>
